2023/03/28 ajax 링크 수정

--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -460,18 +460,61 @@
         var type = tag.attr('data-value');
 
         $.ajax({
-            url: '/Photostagram/profile/follower',
+            url: '/Photostagram/profile/followers',
             type: 'post',
             async: false,
             data: {'pg':0, 'username':pageUser, type:'type'},
             dataType: 'json',
             success: function(data){
                 if (Object.keys(data).length != 0) {
-                    i++;
                     console.log ('성공!');
-                    for (i=0; i<Object.keys(data).length; i++) {
-                        let
+                    console.log (data);
+                    /***
+                    pop.empty();
+                    for (i=0; i<=Object.keys(data).length; i++) {
+                        let name = data[i].hashtag
+                        let result = data[i].followResult
+                        let num = data[i].no
+                        let tags='';
+                        if (result = 0) {
+                            tags = `<li>
+                                        <a href="#">
+                                         <div>
+                                            <img src="img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                                         </div>
+                                         <h1>${name}</h1>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}">
+                                            <span>팔로우</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}" style="display:none;">
+                                            <span>팔로잉</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                   </li>`
+                        } else {
+                            tags= `<li>
+                                        <a href="#">
+                                         <div>
+                                            <img src="img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                                         </div>
+                                         <h1>${name}</h1>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}" style="display:none;">
+                                            <span>팔로우</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}">
+                                            <span>팔로잉</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                   </li>`
+                        }
+
+                        pop.append(tags);
                     }
+                    ***/
                 }
             }
         });
@@ -479,54 +522,61 @@
 
     tagBtn.on('click', function(e){
         e.preventDefault();
+
         $.ajax({
             url: '/Photostagram/profile/tags',
             type: 'post',
             async: false,
-            data: {'pg':i, 'username':pageUser},
+            data: {'username':pageUser},
             dataType: 'json',
             success: function(data){
                 if (Object.keys(data).length != 0) {
-                    i++;
                     console.log ('성공!');
-                    for (i=0; i<Object.keys(data).length; i++) {
-                        let name = data[i].hashtag;
-                        let result = data[i].followResult;
+                    console.log(data);
+                    pop.empty();
+                    for (i=0; i<=Object.keys(data).length; i++) {
+                        let name = data[i].hashtag
+                        let result = data[i].followResult
+                        let num = data[i].no
                         let tags='';
 
                         if (result = 0) {
-                            tags = `<a href="#">
-                                     <div>
-                                        <img src="/Photostagram/thumb/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-                                     </div>
-                                     <h1>${name}</h1>
-                                    </a>
-                                    <a href="#" class="aFloatRight" data-value="${name}">
-                                        <span>팔로우</span>
-                                        <span class="spinner"></span>
-                                    </a>
-                                    <a href="#" class="aFloatRight" data-value="${name}" style="display:none;">
-                                        <span>팔로잉</span>
-                                        <span class="spinner"></span>
-                                    </a>`
+                            tags = `<li>
+                                        <a href="#">
+                                         <div>
+                                            <img src="img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                                         </div>
+                                         <h1>${name}</h1>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}">
+                                            <span>팔로우</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}" style="display:none;">
+                                            <span>팔로잉</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                   </li>`
                         } else {
-                            tags= `<a href="#">
-                                     <div>
-                                        <img src="/Photostagram/thumb/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-                                     </div>
-                                     <h1>${name}</h1>
-                                    </a>
-                                    <a href="#" class="aFloatRight" data-value="${name}" style="display:none;">
-                                        <span>팔로우</span>
-                                        <span class="spinner"></span>
-                                    </a>
-                                    <a href="#" class="aFloatRight" data-value="${name}">
-                                        <span>팔로잉</span>
-                                        <span class="spinner"></span>
-                                    </a>`
+                            tags= `<li>
+                                        <a href="#">
+                                         <div>
+                                            <img src="img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                                         </div>
+                                         <h1>${name}</h1>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}" style="display:none;">
+                                            <span>팔로우</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                        <a href="#" class="aFloatRight" data-value="${num}">
+                                            <span>팔로잉</span>
+                                            <span class="spinner"></span>
+                                        </a>
+                                   </li>`
                         }
 
-                        tag.append(tags);
+                        pop.append(tags);
                     }
                 }
             }
