2023/03/28 해시태그 팔로잉, 모달 무한스크롤 ajax 처리 등 구현 완료

--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -291,31 +291,30 @@
 
   .aFloatRight {
     float: right;
-    background: #32a4ff;
     border-radius: 5px;
     text-align: center;
   }
   .aFloatRight > span {font-weight: bold;}
-  .userFollow {
+  .aFloatRight > .spinner {
+          position: absolute;
+          display: none;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background-image: url(../img/GIF/spinner.gif);
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-color: white;
+          background-position: center;
+      }
+
+  .userFollow, .tagFollow {
     position: relative;
     background-color: #32a4ff;
    }
 
-    .aFloatRight > .spinner {
-        position: absolute;
-        display: none;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        background-image: url(../img/GIF/spinner.gif);
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-color: white;
-        background-position: center;
-    }
-
-  .userFollowing {position: relative; background: #e9e9e9;}
+  .userFollowing, .tagFollowing {position: relative; background: #e9e9e9;}
   .userSelect {position: relative; background: #e9e9e9;}
 
     .photoModal {
