--- a/Spring/Photostagram/src/main/resources/templates/member/terms.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/terms.html
@@ -5,7 +5,7 @@
             <div class="birth">
                 <p>이용 약관에 동의</p>
                 <div>
-                    Instagram은 회원님의 개인 정보를 안전하게 보호합<br>니다.
+                    Photostagram은 회원님의 개인 정보를 안전하게 보호합<br>니다.
                     새 계정을 만들려면 모든 약관에 동의하세요.
                 </div>
             </div>
