--- a/Spring/Photostagram/src/main/resources/templates/fragments/_chatModal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_chatModal.html
@@ -59,59 +59,15 @@
                                         member += "</div>";
 
                                    $('.reco-list-wrap').append(member);
-                                });
 
-                                $('input[name=userCheck]').click(function(){
+                                }); // foreach end
+                            } // else end
+                        } // success end
+                    }); // ajax end
+                } // if keycode == 13 end
+            }); // keydown event end
 
-                                    //alert('here1');
-
-                                    let div = $(this).parent('div');
-                                    let userCheck  = div.children('input[name=userCheck]');
-
-                                    let length = $('input:checkbox[name=userCheck]:checked').length;
-                                    console.log('here1 : '+length);
-
-                                    let username = div.attr('data-username');
-                                    let no = div.attr('data-no');
-
-                                    if(userCheck.is(':checked')){
-                                        console.log('checked!');
-                                        $('.sendingUser').append('<h5 class='+username+' data-num='+no+'>'+username+'&nbsp;&nbsp;</h5>');
-                                        $('.new-body2-1').val('');
-                                        $('.recommend').show();
-                                        $('.reco-list-main').show();
-                                        $('.reco-list-main-add').remove();
-
-                                        if($('.sendingUser').children().length > 0){
-                                            $('.btn-next').attr("disabled", false);
-                                            $('.btn-next').css("color", "#0000ff");
-                                        }
-                                    }else{
-                                        console.log('not checked!');
-                                        $('.'+username+'').remove();
-                                        $('.new-body2-1').val('');
-                                        $('.recommend').show();
-                                        $('.reco-list-main').show();
-                                        $('.reco-list-main-add').remove();
-
-                                        console.log('h5 length : '+$('h5').length);
-
-                                        if($('.sendingUser').children().length == 0){
-                                            $('.btn-next').attr("disabled", true);
-                                            $('.btn-next').css("color", "#4db5f9");
-                                        }
-                                    }
-
-                                });
-
-
-                            }
-                        }
-                    });
-                }
-            });
-
-            $('input[name=userCheck]').click(function(){
+            $(document).on('click', 'input[name=userCheck]', function(){
 
                 //alert('here1');
 
@@ -128,6 +84,9 @@
                     console.log('checked!');
                     $('.sendingUser').append('<h5 class='+username+' data-num='+no+'>'+username+'&nbsp;&nbsp;</h5>');
                     $('.new-body2-1').val('');
+                    $('.recommend').show();
+                    $('.reco-list-main').show();
+                    $('.reco-list-main-add').remove();
 
                     if($('.sendingUser').children().length > 0){
                         $('.btn-next').attr("disabled", false);
@@ -137,6 +96,9 @@
                     console.log('not checked!');
                     $('.'+username+'').remove();
                     $('.new-body2-1').val('');
+                    $('.recommend').show();
+                    $('.reco-list-main').show();
+                    $('.reco-list-main-add').remove();
 
                     console.log('h5 length : '+$('h5').length);
 
