--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="modal_image_content">
                     <div id="input_image_drop" class="modal_image_upload_content">
-                        <button class="beforeBtn" id="beforeBtnDrop"><img src="./img/arrowL.png" alt=""></button>
-                        <button class="afterBtn" id="afterBtnDrop"><img src="./img/arrowR_8x13.png" alt=""></button>
+                        <button class="beforeBtnDrop" id="beforeBtnDrop"><img th:src="@{/img/arrowL.png}" alt=""></button>
+                        <button class="afterBtnDrop" id="afterBtnDrop"><img th:src="@{/img/arrowR_8x13.png}" alt=""></button>
                         <video autoplay muted loop>
                             <source src="path/to/video.mp4" type="video/mp4">
                         </video>
