--- a/Spring/Photostagram/src/main/resources/static/css/hash.css
+++ b/Spring/Photostagram/src/main/resources/static/css/hash.css
@@ -29,7 +29,9 @@ input, textarea {outline: none;}
 }
 #hash > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
 #hash > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
+#hash > section > .myProfile > .proPhoto > div > video {width: 100%; height: 100%; object-fit: cover;}
 #hash > section > .myProfile > .proPhoto > div > a > img {width: 100%; height: 100%; object-fit: cover;}
+#hash > section > .myProfile > .proPhoto > div > a > video {width: 100%; height: 100%; object-fit: cover;}
 #hash > section > .myProfile > .detail {float:left; width:500px;}
 #hash > section > .myProfile > .detail > .pTop {
     display: block;
@@ -121,8 +123,14 @@ input, textarea {outline: none;}
     margin: 5px;
     overflow: hidden;
 }
-#hash > section > .myList > .pic > a {display: block;}
+#hash > section > .myList > .pic > a {display: block; width:300px; height:300px;}
 #hash > section > .myList > .pic > a > img {width: 300px; height: 300px;}
+#hash > section > .myList > .pic > a > video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+}
 
 
   #following {display: none;}
